# Seekify

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LEGAL_NOTICE.md  LICENSE.md  MANIFEST.in  README.md  SECURITY.md  changelog.md  environment.yml  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  pypi-publish.yml
docs/: USER_GUIDE.md
searchit/: __init__.py  base.py  cli.py  duckduckgo_client.py  exceptions.py  search.py  utils.py
searchit/engines/: __init__.py  annasarchive.py  bing.py  bing_news.py  brave.py  duckduckgo.py  duckduckgo_images.py  duckduckgo_news.py  duckduckgo_videos.py  google.py  grokipedia.py  mojeek.py  wikipedia.py  yahoo.py  yahoo_news.py  yandex.py
seekify/: __init__.py  base.py  cli.py  client.py  duckduckgo_client.py  exceptions.py  search.py  utils.py
seekify/engines/: __init__.py  annasarchive.py  bing.py  bing_news.py  brave.py  duckduckgo.py  duckduckgo_images.py  duckduckgo_news.py  duckduckgo_videos.py  google.py  grokipedia.py  mojeek.py  wikipedia.py  yahoo.py  yahoo_news.py  yandex.py
tests/: test_cli.py  test_engines.py
